--- a/clickmechanic/views/about.html
+++ b/clickmechanic/views/about.html
@@ -1,22 +1,8 @@
-<html>
-	<head>
-		<title></title>
-		<link rel="stylesheet" href="css/dev.css">
-	</head>
-	
-
-	<nav class="primary-nav-desktop">
-		<div class="container-wide">
-			<ul class="primary-nav-links">
-				<li><a>Link</a></li>
-				<li><a>Link</a></li>
-				<li><a>Link</a></li>
-			</ul>
-		</div>
-	</nav>
-	<body>
-	<div class="masthead">
-		<div class="container-wide">
+@@include('_header.html')
+<body class="page-about">
+	@@include('_nav.html')
+	<div class="masthead no-margin">
+		<div class="masthead-contents">
 			<h1>About Us</h1>
 		</div>
 	</div>
@@ -32,7 +18,7 @@
 		<div class="container-wide">
 			<ul class="flex-grid-4 gutter-triple margin-bottom-triple">
 				<li>
-					<img src="images/andrew-jervis.png">
+					<img src="../../images/andrew-jervis.png">
 					<h3>Andy Jervis</h3>
 					<p class="caption">Co-founder &amp; CEO</p>
 				</li>
