--- a/clickmechanic/views/legals.html
+++ b/clickmechanic/views/legals.html
@@ -1,50 +1,76 @@
-<html>
-	<head>
-		<title></title>
-		<link rel="stylesheet" href="css/dev.css">
-	</head>
-	
-
-	<nav class="primary-nav-desktop">
-		<div class="container-wide">
-			<ul class="primary-nav-links">
-				<li><a>Link</a></li>
-				<li><a>Link</a></li>
-				<li><a>Link</a></li>
-			</ul>
-		</div>
-	</nav>
-	<body>
+@@include('_header.html')
+<body class="page-legals">
+	@@include('_nav.html')
 	<div class="masthead">
-		<div class="container-wide">
+		<div class="masthead-contents">
 			<h1>About Us</h1>
 		</div>
 	</div>
-	<div class="secondary-nav-mobile-toggle">Current Page</div>
-	<section class='padded background-light'>
-		
-		<div class="container-wide">
-			<div class="flex-row">
-				<div class="columns-3">
-					<div class="secondary-nav">
-						<ul>
-							<li><a href="#">Terms &amp; Conditions</a></li>
-							<li><a href="#">Booking Policies</a></li>
-							<li><a href="#">Privacy Policy</a></li>
-							<li><a href="#">Copyright Notice</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="columns-9 typography">
-					<h2>Introduction</h2>
-					<p>The difficulty that people encounter, quite understandably when discussing metaphysical propositions, is a conceptual one; a very established perspective and one that has been conditioned through millennia of social context. Let us consider an example.</p>
+	<div class="container-wide page-body">
+			<nav class="secondary-nav">
+				<ul>
+					<li><a class="is-selected" href="#">Terms & Conditions</a></li>
+					<li><a href="#">Booking Policies</a></li>
+					<li><a href="#">Privacy Policy</a></li>
+					<li><a href="#">Copyright Notice</a></li>
+				</ul>
+			</nav>
 
-					<P>If I were to propose to you that there was such a thing as a glorb on the far side of Pluto that was, unbeknownst to everyone except myself, directly responsible for maintaining our Universe’s existence: how would you categorise your stance?</p>
+			<div class="flex-row">
+				<div class="columns-9 offset-3 typography">
+					<p>This policy forms part of the Agreement (as specified in the Terms & Conditions) between you and ClickMechanic Ltd. All personal information collected and used by ClickMechanic will be used in accordance with the 1998 Data Protection Act in the United Kingdom.</p>
+
+					<h2>Information collected</h2>
+					<p>We may collect and process the following data about you:</p>
+					
+					<ul>
+						<li>Information that you provide by filling in forms (or otherwise posting) on clickmechanic.com (the Website) or information that you ask us to collect from another site.</li>
+						<li>Vehicle information obtained from third parties based on a Vehicle Registration Mark provided by you, including but limited to: vehicle details; vehicle history; vehicle tax status and renewal dates; and vehicle MOT status, history and expiry date.</li>
+						<li>If you contact us, we may keep a record of that correspondence.</li>
+						<li>Your correspondence, via our site or associated phone numbers, with other users of our site or Mechanics in the Network.</li>
+						<li>We may also ask you to complete surveys that we use for research purposes, although you do not have to respond to them.</li>
+						<li>Details of your visits to our site including (but not limited to) traffic data, location data and the resources that you access on our site (as well as times and dates related to these).</li>
+					</ul>
+						
+					<h2>Use of information</h2>
+
+					<h3>General</h3>
+					<p>When using the Website or Service you will be requested for necessary personal information. This information will only be used to help administer any services you have requested, and to inform you of other services which we feel will be of interest to you.</p>
+
+					<p>Unless we receive a statement from you explicitly stating you do not want to receive electronic communications it will be deemed that the receiver of the electronic communication has consented to receiving such a communication. You have the ability to opt-out of receiving electronic communications at any point of using our service. This opt-out can be found on the footer of any marketing communication sent to you.</p>
+
+					<p>We have taken measures to ensure that information supplied to us is held securely. Therefore we may occasionally request proof of identity before allowing access to any of this personal information.</p>
+
+					<p>You have the right to access any personal information supplied to ClickMechanic and change any inaccuracies held. Registration to the Website</p>
+
+					<p>The website will collect email addresses in order to send registrants their chosen password, which will enable member’s online access to the website. The user can access this information at any time in order to update any of their details. Other registration information is collected in order to generate a profile of the visitors using the ClickMechanic website. This information will then be used to aid the ClickMechanic development team to create more relevant content for our users.</p>
+
+					<h3>Quotations provided by the Service</h3>
+					<p>In the course of providing quotations on behalf of the Network the Website will collect names, email addresses, vehicle details and details of the mechanical work desired. We may use this information to send you useful emails relating to your quotation, vehicle or desired mechanical work.</p>
+
+					<h3>Requests to the Network</h3>
+					<p>In the process of requesting a Mechanic through the Service, we will gather personal information including names, addresses, contact details, and vehicle details. In addition to the uses outlined elsewhere in this Policy, we may share any of these details with any Mechanics in the Network for the purposes including: deciding whether to accept a request, fulfilment of the subsequent Booking, ordering of parts, offering opinions related to the request, or any other reasonable purpose.</p>
+
+					<h3>Financial information</h3>
+					<p>ClickMechanic does not store the credit/debit card information necessary to collect payments, however we use a PCI-DSS compliant third party to store these details on our behalf. We endeavor to protect the security of your credit/debit card information during transmission by using Secure Sockets Layer (SSL) technology. We may retain a limited and incomplete record of your credit/debit card information for presentational purposes.</p>
+
+					<h3>Where We Store Your Personal Data</h3>
+					<p>The data that we collect from you may be transferred to, and stored at, a destination outside the European Economic Area (the EEA). It may also be processed by staff operating outside the EEA who work for us or for one of our suppliers. Such staff maybe engaged in (among other things) the processing of your payment details and the provision of support services. By submitting your personal data, you agree to this transfer, storing and processing. We will take all steps reasonably necessary to ensure that your data is treated securely and in accordance with this privacy policy.</p>
+
+					<p>Unfortunately, the transmission of information via the Internet is not completely secure. Although we will do our best to protect your personal data, we cannot guarantee the security of your data transmitted to our site; any transmission is at your own risk. Once we have received your information, we will use strict procedures and security features to try to prevent unauthorised access.</p>
+
+					<p>We use the information you provide us with to operate our site (display ads, etc.), make our site better, and provide you with the services you ask us to.</p>
+
+					<p>All details supplied to ClickMechanic will be safeguarded by our privacy policy and also the United Kingdom 1998 Data Protection Act. Where services within the website include the use of third parties to help carry out that particular service your personal details will be required to be passed to these parties. Your agreement to these terms and conditions includes consent for your data to be used by others to provide those services.</p>
+
+					<h2>Cookies</h2>
+					<p>When you visit ClickMechanic.com we issue a "cookie" file which is stored on your browser or the hard drive of your computer. Cookies contain information that is transferred to your computer’s hard drive. Cookies are widely used in order to make websites work, as well as to provide information. Cookies enable us to: improve the use of our Website; to recognise your computer; to store settings to help facilitate your use of our Website; and to deliver a better and more personalised service.</p>
+
+					<p>Some of the cookies used are essential for the Website to operate. You may block all or some cookies from this Website. However, if you use your browser settings to block cookies (including essential cookies) you may not be able to access ClickMechanic.com. Unless you have adjusted your browser setting so that it will refuse cookies, our system will issue cookies as soon as you enter our Website.</p>
+
+					<p>For more information about cookies or for details on deleting them or refuse their installation on your computer, visit http://www.aboutcookies.org</p>
 				</div>
 			</div>
 		</div>
-	</section>
+	@@include('_footer.html')
 
-	
-	</body>
-</html>
