--- a/sass/components/_inc/_footer.sass
+++ b/sass/components/_inc/_footer.sass
@@ -29,12 +29,9 @@
 
 	.footer-links
 		+nobullet
-		margin-bottom: $size-double-unit
-		+respond(device-small)
-			display: none
 		li
 			&:not(:last-child)
-				margin-bottom: $size-half-unit
+				margin-bottom: $size-single-unit
 			a
 				color: white
 
