--- a/sass/components/_inc/_masthead.sass
+++ b/sass/components/_inc/_masthead.sass
@@ -12,9 +12,11 @@ html
 	background: 
 		repeat: no-repeat no-repeat
 		size: cover
+		position: center center
 
 	min-height: 400px
 	padding: $size-double-unit 0
+	margin-bottom: $size-double-unit 
 	text-align: center
 	color: white
 	display: table
@@ -25,6 +27,9 @@ html
 
 	&.full-height
 	
+	h1
+		margin-bottom: 0
+
 	p 
 		margin-top: $size-single-unit
 
