--- a/sass/mixins/_inc/_typography.sass
+++ b/sass/mixins/_inc/_typography.sass
@@ -9,7 +9,7 @@
 	$text-breakpoints-map: text-breakpoints-for($text-size)
 	@return map-get($text-breakpoints-map, $breakpoint-name)
 
-$mobile-first: false 
+$mobile-first: true
 
 // lib/mixins/_responsive.scss
 @mixin respond($breakpoint-name)
