--- a/sass/helpers/_inc/_margins-paddings.sass
+++ b/sass/helpers/_inc/_margins-paddings.sass
@@ -1,8 +1,8 @@
-// .no-margin
-// 	margin: 0 !important
+.no-margin
+	margin: 0 !important
 
-// .no-padding
-// 	padding: 0
+.no-padding
+	padding: 0 !important
 
 $types: padding, margin
 $sides: top, right, bottom, left
